# agent0r

./: ACT0R_SPEC.md  AGENT.md  CLAUDE.md  PROJECT.md  README.md  TASKS.md  UI_GUIDE.md  pyproject.toml  setup.py
docs/: adapters.md  cli.md  evaluation.md  multi_agent.md  policy.md  reporting.md  runner.md  storage.md  tools.md  trace.md
docs/scenarios/: schema.md
fixtures/tools/documents/: sample_doc.txt
fixtures/tools/email/: sample_email.txt
scenarios/extended/: SCN-101_ocr_text_injection.yaml  SCN-102_html_hidden_dom_injection.yaml  SCN-103_browser_agent_workflow_injection.yaml
scenarios/mvp/: SCN-001_benign_email_summary.yaml  SCN-002_email_embedded_malicious_instruction.yaml  SCN-003_search_result_injection.yaml  SCN-004_memory_poisoning_attempt.yaml  SCN-005_unauthorized_export_attempt.yaml  SCN-006_goal_hijack_retrieved_document.yaml
src/act0r/: __init__.py  cli.py  ui_backend.py
tests/adapters/: test_ollama.py  test_openai_compatible.py
tests/cli/: test_cli.py
tests/evaluation/: test_evaluator.py  test_secondary_judge.py
tests/integration/: test_broader_attack_surfaces.py  test_mvp_security_flows.py
tests/multi_agent/: test_analyzer.py
tests/policy/: test_engine.py
tests/reporting/: test_exports.py  test_markdown.py
tests/runner/: test_runner.py
tests/scenarios/: test_extended_scenarios.py  test_loader.py  test_mvp_scenarios.py
tests/storage/: test_sqlite_storage.py
tests/tools/: test_fake_tools.py  test_registry.py
tests/trace/: test_recorder.py
tests/ui/: test_ui_backend.py
ui/: README.md  app.js  index.html  styles.css
(+58 files in other folders)
